<resources>
    <string name="app_name">MyTasky</string>
    <string name="enter_your_email_hint">Enter Your Email</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_text_view">Don\'t have account? sign up</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_task_button_content_description">Add task button</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="task_details_edit_text_hint">Task Details</string>
    <string name="task_title_edit_text_hint">Task Title</string>
</resources>