<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.dialog.AddTaskDialogFragment">


    <EditText
        android:id="@+id/editText_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/task_title_edit_text_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editText_task_details"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/task_details_edit_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_task_title" />

    <Button
        android:id="@+id/save_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:background="@color/cardview_light_background"
        android:text="@string/save_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/editText_task_details" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="9dp"
        android:background="@color/cardview_light_background"
        android:text="@string/cancel_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/save_task_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_task_details" />
</androidx.constraintlayout.widget.ConstraintLayout>